# CampusConnectAI

backend/: .dockerignore  Dockerfile  bot.py  check_env.py  cron_state.db  excel_utils.py  main.py  prompt_data.py  pyproject.toml  server_utils.py  test_connection.py  test_user_route.py  transcript.txt
backend/core/: config.py  database.py
backend/functionCalling/: bot.py
backend/models/: user.py
backend/routers/: health.py  user.py
backend/schemas/: user.py
backend/service/: bot.py  demo.py  generate_context.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/history/: page.tsx
frontend/app/stats/: page.tsx
frontend/app/stats/[id]/: page.tsx
frontend/components/: Sidebar.tsx
